# gql

./: README.md
.github/workflows/: cmake-build.yml
include/gql/ast/: algorithm.h  ast.h  error.h  print.h
include/gql/ast/detail/: copyable_ptr.h  enumerate_children.h  pp_for_each.h  pp_utilities.h  reflection.h
include/gql/ast/nodes/: base.h  common.h  expression.h  graph_patterns.h  graph_types.h  node.h  path_patterns.h  references.h  statements.h  types.h
include/gql/ast/print/: common.h  expression.h  expression_parens_helpers.h  expression_wrappers.h  generic.h  graph_patterns.h  graph_types.h  helpers.h  output_stream.h  path_patterns.h  references.h  statements.h  types.h
include/gql/parser/: error.h  parser.h
include/gql/parser/detail/: GQLParser.h
include/gql/parser/detail/ast_builder/: ast.h  base.h  common.h  expression.h  graph_patterns.h  graph_types.h  path_patterns.h  references.h  statements.h  types.h
include/gql/rewrite/: simplified_path_pattern.h
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  input_positions_test.cpp  input_positions_test.h  output_stream.cpp
src/parser/: CMakeLists.txt  ast_builder.cpp  ast_builder.h  parse_file_test.cpp  parser.cpp  parser_test.cpp  parser_unittest.cpp  unescape_string.cpp  unescape_string.h
src/parser/antlr4_runtime/: CMakeLists.txt
src/rewrite/: CMakeLists.txt  simplified_path_pattern.cpp  simplified_path_pattern_unittest.cpp
